# marimo-webui

./: .gitignore  README.md  pyproject.toml
src/marimo_webui/: server.py  tempreture.py
src/marimo_webui/templates/: base.html  index.html
